Archive2/51/5612769e5b0296/output
main.cpp:156:10: error: expected '}'
return 0;
         ^
main.cpp:20:11: note: to match this '{'
int main(){
          ^
1 error generated.
